--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -3,59 +3,59 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【更新】川普在数千支持者面前签署行政令</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418365-GettyImages-2194978999-600x400.jpg" />///image2=```diff
-- 2025年1月20日，美国总统唐纳德·川普（特朗普）在华盛顿特区第一资本体育馆举行的室内就职游行后签署一系列行政命。 (Christopher Furlong/Getty Images)
+- 2025年1月20日，美国总统唐纳德·川普在华盛顿特区第一资本体育馆举行的室内就职游行后签署一系列行政命。 (Christopher Furlong/Getty Images)
 ```
-<h6>2025年1月20日，美国总统唐纳德·川普（特朗普）在华盛顿特区第一资本体育馆举行的室内就职游行后签署一系列行政命。 (Christopher Furlong/Getty Images)
+<h6>2025年1月20日，美国总统唐纳德·川普在华盛顿特区第一资本体育馆举行的室内就职游行后签署一系列行政命。 (Christopher Furlong/Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2025年01月19日讯】（大纪元记者李言、张婷、林燕综合报导）第47任美国总统唐纳德?川普（特朗普）于周一（1月20日）举行就职典礼。川普在就职演说中阐述了未来4年的愿景，并强调说，他将“成为所有美国人民的总统”。</p>
 <p>川普将与美国副总统当选人JD?万斯宣誓就职，开始为期四年的共和党政府执政期。这也标志着川普作为美国总统的第二届任期正式开启。他第一次就职总统是2017年。</p>
 <p>总统就职标志着前后两届联邦政府权力的正式交接，根据《美国宪法第二十条修正案》规定，总统四年任期于1月20日中午结束，候任总统随后宣誓就职。</p>
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
-<p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
+<p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1k1m1fxotwyij.cloudfront.net/M9txKD4Jw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1dy14m1lbgtrj.cloudfront.net/L7xxKD4Jk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>川普签署一系列行政令</h2>
 <p>川普在数千名支持者面前签署一系列行政令，包括撤销拜登的78项行政命令和备忘录；指导政府机构冻结所有监管工作，直到新政府审核完毕；冻结除军队以外的所有联邦工作招募；要求联邦工作人员重返办公室工作；冻结除必要领域外的官员招聘；退出巴黎气候协定。</p>
-<p>此外，他还签署了以下行政令，分别是指示各部门应对通货膨胀；退出巴黎气候条约；一封将转交联合国宣布退出巴黎协定的信，以及“恢复言论自由并防止政府进一步审查言论自由”。</p>
+<p>此外，他还签署了以下行政令，分别是指示各部门应对通货膨胀；一封将转交联合国宣布退出巴黎协定的信，以及“恢复言论自由并防止政府进一步审查言论自由”。</p>
 <p>详情请见<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418194.md#1">川普就职首条白宫新闻稿 阐述美国优先政纲</a></p>
-<figure id="attachment_14418359" aria-describedby="caption-attachment-14418359" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418359-GettyImages-2194438066.jpg"><img decoding="async" class="size-medium wp-image-14418359" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418359-GettyImages-2194438066-450x283.jpg" alt="" width="450" b="283" /></a><figcaption id="caption-attachment-14418359" class="wp-caption-text">2025年1月20日，在华盛顿特区Capital One Arena 举行的就职游行期间，当中东问题特使Steve Witkoff发表讲话时，遭哈马斯绑架的以色列人质亲属获邀出行，他们手捧照片站在后面。 (Photo by Jim WATSON / AFP) (Photo by JIM WATSON/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_14418359" aria-describedby="caption-attachment-14418359" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418359-GettyImages-2194438066.jpg"><img decoding="async" class="size-medium wp-image-14418359" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418359-GettyImages-2194438066-450x283.jpg" alt="" width="450" b="283" /></a><figcaption id="caption-attachment-14418359" class="wp-caption-text">2025年1月20日，在华盛顿特区Capital One Arena 举行的就职游行期间，当中东问题特使Steve Witkoff发表讲话时，遭哈马斯绑架的以色列人质亲属获邀出行，他们手捧照片站在后面。 (Jim Watson/AFP)</figcaption></figure>
 <h2>特使：川普将为中东提供清晰大胆的提议</h2>
-<p>中东问题特使史蒂夫·威特科夫（Steve Witkoff）首先发言。他表示，川普务实的作风将“为中东地区提供了清晰、大胆的愿景”。</p>
+<p>中东问题特使史蒂夫?威特科夫（Steve Witkoff）首先发言。他表示，川普务实的作风将“为中东地区提供了清晰、大胆的愿景”。</p>
 <p>维特科夫介绍了加沙人质的家人，表示其中一些人的孩子仍被哈马斯关押。这些人质家属将与川普会面。</p>
 <p>维特科夫说：“我们不再为那些不愿资助自身的国家承担财政负担了。” “空白支票的时代已经结束了。”</p>
-<figure id="attachment_14418335" aria-describedby="caption-attachment-14418335" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418335-AFP__20250120__2194969174__v1__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid.jpg"><img decoding="async" class="size-medium wp-image-14418335" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418335-AFP__20250120__2194969174__v1__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14418335" class="wp-caption-text">2025年1月20日，美国总统唐纳德·川普（特朗普）与副总统J.D. 万斯（左）和第一夫人梅拉尼娅（右）抵达华盛顿特区首都第一资本体育馆参加室内就职游行。Christopher Furlong / GETTY IMAGES NORTH AMERICA / Getty Images via AFP)</figcaption></figure>
+<figure id="attachment_14418335" aria-describedby="caption-attachment-14418335" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418335-AFP__20250120__2194969174__v1__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid.jpg"><img decoding="async" class="size-medium wp-image-14418335" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418335-AFP__20250120__2194969174__v1__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14418335" class="wp-caption-text">2025年1月20日，美国总统川普与副总统万斯（左）和第一夫人梅拉尼娅（右）抵达华盛顿特区首都第一资本体育馆参加室内就职游行。(Christopher Furlong/GETTY IMAGES NORTH AMERICA/Getty Images via AFP)</figcaption></figure>
 <h2>就职游行活动开始</h2>
 <p>美东时间下午5:35，川普进入第一资本体育馆（Capital One Arena）。</p>
 <p>因天气原因，总统就职仪式中的“游行”（Parade）环节改为在第一资本体育馆室内进行。</p>
-<p>游行最前面的是宾夕法尼亚州巴特勒县的急救人员，这里是川普竞选期间第一次遭到暗杀的地点。同时，全场为巴特勒县居民、前消防员科里·康佩拉托雷默哀一分钟。康佩拉托雷是当天在集会现场为保护家人免遭枪击而牺牲的。</p>
+<p>游行最前面的是宾夕法尼亚州巴特勒县的急救人员，这里是川普竞选期间第一次遭到暗杀的地点。同时，全场为巴特勒县居民、前消防员科里?康佩拉托雷默哀一分钟。康佩拉托雷是当天在集会现场为保护家人免遭枪击而牺牲的。</p>
 <p>随后出场的是万斯家乡俄亥俄州Middletown High School的乐队和拉拉队。</p>
 <h2>川普的首批内阁提名人有望今天公布结果</h2>
 <p>川普的首批内阁提名人选将于今天晚些在参议院进行表决。</p>
-<p>参议员马可·卢比奥（Marc Rubio）的国务卿提名已获得外交关系委员会批准。此外，参议院情报委员会还推进了约翰·拉特克利夫（John Ratcliffe）领导中央情报局的提名，这两位都有望成为政府中首批高级官员。</p>
-<p>还有参议院军事委员会以14对13通过了对国防部长提名人皮特·海格塞斯（Pete Hegseth）的提名。</p>
+<p>参议员马可?卢比奥（Marc Rubio）的国务卿提名已获得外交关系委员会批准。此外，参议院情报委员会还推进了约翰?拉特克利夫（John Ratcliffe）领导中央情报局的提名，这两位都有望成为政府中首批高级官员。</p>
+<p>还有参议院军事委员会以14对13通过了对国防部长提名人皮特?海格塞斯（Pete Hegseth）的提名。</p>
 <h2>总统就职时需要手放在圣经上吗</h2>
 <p>目前一些川普宣誓就职的图片在网上热传，显示总统的手并未放在圣经上。</p>
 <p>大多数总统在宣誓时会将手放在圣经上，但这只是传统，并非宣誓的必要条件。</p>
 <p>根据美国宪法第六条第三款，国会议员、州立法机构成员以及行政和司法官员需要通过“宣誓或保证”支持宪法。但关键在于誓词本身，而非将手放在圣经上的行为。</p>
-<p>换言之，誓词的内容才是确认任职的必要条件，而非其他象征性行为。</p>
+<p>换言之，誓词的内容才是确认任职的必要条件，而非其它象征性行为。</p>
 <h2>川普参加首次荣誉仪式</h2>
-<p>美国总统唐纳德·川普（特朗普）参加了首次荣誉仪式，该仪式的参与者包括来自宾夕法尼亚州巴特勒（Butler, Pennsylvania）的急救人员代表。</p>
+<p>美国总统唐纳德?川普参加了首次荣誉仪式，该仪式的参与者包括来自宾夕法尼亚州巴特勒（Butler, Pennsylvania）的急救人员代表。</p>
 <p>这项仪式是总统就职典礼传统的一部分，充分展示了美国军队的范围和规模，并具有象征性的意义，对美国总统而言尤为重要。</p>
 <h2>参议院多数党领袖将于周二与川普在白宫会面</h2>
-<p>参议院多数党领袖约翰·图恩（John Thune）告诉CNN，他计划于明天与美国总统唐纳德·川普（特朗普）在白宫会面。</p>
-<p>“我们计划进行这次会谈。”图恩表示，目前仍在敲定今晚哪些内阁提名人将获得确认，但普遍预计马可·卢比奥（Marco Rubio）将被确认为国务卿（Secretary of State）。</p>
+<p>参议院多数党领袖约翰?图恩（John Thune）告诉CNN，他计划于明天与美国总统唐纳德?川普在白宫会面。</p>
+<p>“我们计划进行这次会谈。”图恩表示，目前仍在敲定今晚哪些内阁提名人将获得确认，但普遍预计马可?卢比奥（Marco Rubio）将被确认为国务卿（Secretary of State）。</p>
 <h2>巴勒斯坦自治政府主席祝贺川普就任美国总统</h2>
-<p>巴勒斯坦自治政府主席马哈茂德·阿巴斯（Mahmoud Abbas）于周一向美国总统唐纳德·川普（特朗普）表达祝贺，并表示巴勒斯坦自治政府“准备与川普合作”，以“在两国方案的指导下实现和平”。</p>
+<p>巴勒斯坦自治政府主席马哈茂德?阿巴斯（Mahmoud Abbas）于周一向美国总统唐纳德?川普表达祝贺，并表示巴勒斯坦自治政府“准备与川普合作”，以“在两国方案的指导下实现和平”。</p>
 <p>根据其办公室的声明，阿巴斯表示，“这一愿景旨在建立巴勒斯坦国和以色列国，两国和平共处，并实现安全。”</p>
 <p>在川普的第一任期内，他的政府曾提出一项两国方案的版本，主要迎合以色列的关切。该计划保留了被占领的西岸地区的许多犹太人定居点，赋予以色列对约旦河谷的主权，并为巴勒斯坦提供靠近埃及边境的沙漠土地。</p>
 <p>当时，阿巴斯称这一计划是“世纪之辱”。</p>
 <h2>意大利总理祝贺川普出任美国总统</h2>
-<p>意大利总理乔治亚·梅洛尼（Giorgia Meloni）周一在出席唐纳德·川普（特朗普）就职典礼后，向他表示祝贺。</p>
+<p>意大利总理乔治亚?梅洛尼（Giorgia Meloni）周一在出席唐纳德?川普就职典礼后，向他表示祝贺。</p>
 <p>梅洛尼在X平台上发文说，“我确信，我们国家之间的友谊以及将我们联系在一起的价值观，将继续加强意大利与美国之间的合作，携手应对全球挑战，为我们的人民构建一个繁荣与安全的未来。”</p>
 <p>梅洛尼表示，意大利将“始终致力于巩固欧洲与美国之间的对话”。</p>
-<p>梅洛尼是受邀参加川普就职典礼的多位世界领袖之一，她与阿根廷总统哈维尔·米莱（Javier Milei）相邻而坐。</p>
+<p>梅洛尼是受邀参加川普就职典礼的多位世界领袖之一，她与阿根廷总统哈维尔?米莱（Javier Milei）相邻而坐。</p>
 <p>本月早些时候，梅洛尼曾在佛罗里达州棕榈滩的海湖庄园（Mar-a-Lago）与川普会面。</p>
 <h2>川普将退出《巴黎气候协定》</h2>
 <p>川普政府宣布，美国将退出《巴黎气候协定》（Paris climate agreement）。该协定由几乎所有国家签署，旨在减少排放并将全球平均气温的增幅控制在工业化前水平以下。</p>
@@ -63,47 +63,47 @@
 <p>白宫于川普就职后的周一下午通过一份文件宣布了这一决定。</p>
 <p>川普在竞选期间多次表示，他计划大力推进美国的石油和天然气开采及生产。他在周一的就职演说中再次重申了这一承诺。目前，美国已是全球最大的石油生产国，仅次于沙特阿拉伯和俄罗斯。</p>
 <h2>马斯克迎接川普支持者：人类文明分水岭</h2>
-<p>接下来总统唐纳德·川普（特朗普）前往位于华盛顿特区市中心的Capital One Arena，在体育场内的游行活动中迎接支持者。</p>
-<p>现场的气氛因埃隆·马斯克（Elon Musk）和卡什·帕特尔（Kash Patel）的到场而沸腾。每当屏幕上出现他们的身影，群众都报以热烈掌声。</p>
-<p>特斯拉CEO埃隆·马斯克率先登台演讲。他形容川普的胜利是“人类文明的分水岭”，并表示，“这并非普通的胜利，这次选举意义重大，真的很重要。”马斯克感谢支持者“让这一切成为可能”，并称，“文明的未来已得到保障。”</p>
+<p>接下来总统唐纳德?川普前往位于华盛顿特区市中心的Capital One Arena，在体育场内的游行活动中迎接支持者。</p>
+<p>现场的气氛因埃隆?马斯克（Elon Musk）和卡什?帕特尔（Kash Patel）的到场而沸腾。每当屏幕上出现他们的身影，群众都报以热烈掌声。</p>
+<p>特斯拉CEO埃隆?马斯克率先登台演讲。他形容川普的胜利是“人类文明的分水岭”，并表示，“这并非普通的胜利，这次选举意义重大，真的很重要。”马斯克感谢支持者“让这一切成为可能”，并称，“文明的未来已得到保障。”</p>
 <p>他补充说，“我们将拥有安全的城市、稳固的边界、理性的财政支出，这些都是基本的事情。”最后，他笑着说，“我们还将把狗狗币（Doge）带上火星。”</p>
 <p>接下来发言的是川普提名的联邦调查局局长帕特尔。他表示，“美国正处于十字路口，但我们的未来光明。”</p>
 <p>作为川普新成立的“政府效率部”联合负责人之一，马斯克在Capital One Arena庆祝川普的当选和就职时说道，“这就是胜利的感觉。”</p>
 <h2>北约秘书长：川普上任后将“加速”防务开支</h2>
-<p>北约秘书长马克·吕特（Mark Rutte）周一表示，随着唐纳德·川普（特朗普）重返总统职位，北约将“加速推进”防务开支和生产。</p>
+<p>北约秘书长马克?吕特（Mark Rutte）周一表示，随着唐纳德?川普重返总统职位，北约将“加速推进”防务开支和生产。</p>
 <p>川普此前曾表示，对于未达防务开支标准的北约成员国，美国不会向此类国家提供保护。</p>
 <p>吕特并未直接回应川普的言论，而是表达了对未来的乐观态度。他强调说，“我们可以通过北约的力量实现和平！”</p>
 <h2>马克·米利将军肖像从五角大楼墙上移除</h2>
-<p>前美国参谋长联席会议主席马克·米利（Mark Milley）的肖像已从五角大楼的墙上移除。米利曾在唐纳德·川普（特朗普）第一任期内担任美国最高军事官员，并曾警告川普是“法西斯主义者”。</p>
+<p>前美国参谋长联席会议主席马克?米利（Mark Milley）的肖像已从五角大楼的墙上移除。米利曾在唐纳德?川普第一任期内担任美国最高军事官员，并曾警告川普是“法西斯主义者”。</p>
 <p>这幅肖像仅在10天前于参谋长联席会议主席办公室外的走廊举行仪式揭幕。然而，随后便被移除。</p>
 <p>米利在2019年由川普任命为美国最高军事官员，但两人的关系在川普第一任期的最后几个月中迅速恶化，米利最终成为川普频繁批评的对象。</p>
 <h2>川普出席国会午宴 政商领袖齐聚一堂</h2>
-<p>美国总统唐纳德·川普（特朗普）出席了国会午宴，与会者包括国会议员、内阁提名人以及川普核心圈内的商界巨头。坐在川普身旁的是第一夫人梅拉尼娅·川普（Melania Trump）和联合国会就职典礼委员会主席、参议员艾米·克洛布查（Amy Klobuchar）。</p>
-<p>这场午宴为重要人士提供了一个与政府官员交流并推进核心政策优先事项的机会。苹果公司CEO蒂姆·库克（Tim Cook）被看到坐在小唐纳德·川普（Donald Trump Jr.）与参议院少数党领袖查克·舒默（Chuck Schumer）之间。</p>
+<p>美国总统唐纳德?川普出席了国会午宴，与会者包括国会议员、内阁提名人以及川普核心圈内的商界巨头。坐在川普身旁的是第一夫人梅拉尼娅?川普（Melania Trump）和联合国会就职典礼委员会主席、参议员艾米?克洛布查（Amy Klobuchar）。</p>
+<p>这场午宴为重要人士提供了一个与政府官员交流并推进核心政策优先事项的机会。苹果公司CEO蒂姆?库克（Tim Cook）被看到坐在小唐纳德?川普（Donald Trump Jr.）与参议院少数党领袖查克?舒默（Chuck Schumer）之间。</p>
 <h2>川普总统内阁成员名单</h2>
 <p>川普总统的内阁提名人目前正在由立法者审核并进行确认听证。以下是川普提名担任内阁职位的人选：</p>
-<p>? 皮特·赫格塞斯（Pete Hegseth） — 川普提名的国防部长（Defense Secretary）<br />
-? 图尔西·加巴德（Tulsi Gabbard） — 川普提名的国家情报局局长（Director of National Intelligence）<br />
-? 卡什·帕特尔（Kash Patel） — 川普提名的联邦调查局局长（FBI Director）<br />
-? 约翰·拉特克利夫（John Ratcliffe） — 川普提名的中央情报局局长（CIA Director）<br />
-? 伊丽丝·斯特凡尼克（Elise Stefanik） — 川普提名的联合国大使（Ambassador to the United Nations）<br />
-? 斯科特·贝森特（Scott Bessent） — 川普提名的财政部长（Treasury Secretary）<br />
-? 霍华德·卢特尼克（Howard Lutnick） — 川普提名的劳工部长（Labor Secretary）<br />
-? 马可·卢比奥（Marco Rubio） — 川普提名的国务卿（Secretary of State）<br />
-? 克里斯蒂·诺姆（Kristi Noem） — 川普提名的国土安全部长（Secretary of Homeland Security）<br />
-? 帕姆·邦迪（Pam Bondi） — 川普提名的司法部长（Attorney General）<br />
-? 肖恩·达菲（Sean Duffy） — 川普提名的运输部长（Transportation Secretary）<br />
-? 克里斯·赖特（Chris Wright） — 川普提名的能源部长（Energy Secretary）<br />
-? 罗素·沃特（Russell Vought） — 川普提名的预算办公室主任（Director of the Office of Management and Budget）<br />
-? 道格·伯格姆（Doug Burgum） — 川普提名的内政部长（Secretary of the Interior）<br />
-? 李·泽尔丁（Lee Zeldin） — 川普提名的环境保护署署长（Environmental Protection Agency Administrator）<br />
-? 斯科特·特纳（Scott Turner） — 川普提名的住房和城市发展部长（Housing and Urban Development Secretary）<br />
-? 道格·柯林斯（Doug Collins） — 川普提名的退伍军人事务部长（Secretary of the Department of Veterans Affairs）<br />
-? 小罗伯特·F·肯尼迪（Robert F. Kennedy Jr.） — 川普提名的健康与公共服务部长（Secretary of Health and Human Services）<br />
-? 琳达·麦克马洪（Linda McMahon） — 川普提名的教育部长（Secretary of Education）</p>
+<p>? 皮特?赫格塞斯（Pete Hegseth） — 川普提名的国防部长（Defense Secretary）<br />
+? 图尔西?加巴德（Tulsi Gabbard） — 川普提名的国家情报局局长（Director of National Intelligence）<br />
+? 卡什?帕特尔（Kash Patel） — 川普提名的联邦调查局局长（FBI Director）<br />
+? 约翰?拉特克利夫（John Ratcliffe） — 川普提名的中央情报局局长（CIA Director）<br />
+? 伊丽丝?斯特凡尼克（Elise Stefanik） — 川普提名的联合国大使（Ambassador to the United Nations）<br />
+? 斯科特?贝森特（Scott Bessent） — 川普提名的财政部长（Treasury Secretary）<br />
+? 霍华德?卢特尼克（Howard Lutnick） — 川普提名的劳工部长（Labor Secretary）<br />
+? 马可?卢比奥（Marco Rubio） — 川普提名的国务卿（Secretary of State）<br />
+? 克里斯蒂?诺姆（Kristi Noem） — 川普提名的国土安全部长（Secretary of Homeland Security）<br />
+? 帕姆?邦迪（Pam Bondi） — 川普提名的司法部长（Attorney General）<br />
+? 肖恩?达菲（Sean Duffy） — 川普提名的运输部长（Transportation Secretary）<br />
+? 克里斯?赖特（Chris Wright） — 川普提名的能源部长（Energy Secretary）<br />
+? 罗素?沃特（Russell Vought） — 川普提名的预算办公室主任（Director of the Office of Management and Budget）<br />
+? 道格?伯格姆（Doug Burgum） — 川普提名的内政部长（Secretary of the Interior）<br />
+? 李?泽尔丁（Lee Zeldin） — 川普提名的环境保护署署长（Environmental Protection Agency Administrator）<br />
+? 斯科特?特纳（Scott Turner） — 川普提名的住房和城市发展部长（Housing and Urban Development Secretary）<br />
+? 道格?柯林斯（Doug Collins） — 川普提名的退伍军人事务部长（Secretary of the Department of Veterans Affairs）<br />
+? 小罗伯特?F?肯尼迪（Robert F. Kennedy Jr.） — 川普提名的健康与公共服务部长（Secretary of Health and Human Services）<br />
+? 琳达?麦克马洪（Linda McMahon） — 川普提名的教育部长（Secretary of Education）</p>
 <p>这些提名人选将在完成审核和确认程序后，正式成为川普政府的内阁成员，协助推动政府各项政策和目标的实现。</p>
 <h2>拜登：我们将离开办公室 但不会退出斗争</h2>
-<p>美国前总统乔·拜登（Joe Biden）刚在安德鲁斯联合基地（Joint Base Andrews）发表了他作为前总统的首次简短告别演说，之后他与吉尔·拜登（Jill Biden）将飞往加利福尼亚州。</p>
+<p>美国前总统乔?拜登（Joe Biden）刚在安德鲁斯联合基地（Joint Base Andrews）发表了他作为前总统的首次简短告别演说，之后他与吉尔?拜登（Jill Biden）将飞往加利福尼亚州。</p>
 <p>他表示，川普的就职演说显示“我们还有很多事情要做”，并试图鼓励支持者参与政治行动。</p>
 <p>“我们将离开办公室，但不会退出斗争。”拜登继续说道，并鼓励美国人保持参与并相互照顾。</p>
 <h2>川普：美国回来了</h2>
@@ -114,18 +114,18 @@
 <p>此举切断了寻求入境美国人士的一条关键通道。</p>
 <p>国土安全部官员指出，该应用程序通过提供有序的申请方式，帮助减少了移民越境数量。随着该应用程序的关闭以及庇护限制的实施，边境实质上对寻求庇护者关闭——这是一项非凡的举措。</p>
 <p>根据CBP的说法，现有的预约已被取消。</p>
-<h2>梅拉尼娅·川普新任期计划</h2>
-<p>美国第一夫人梅拉尼娅·川普（Melania Trump）决定以更积极的姿态担任她的第二任期，经常参加与美国总统唐纳德·川普（Donald Trump）及主要利益相关者的会议，并就各种事务向总统提供建议。</p>
+<h2>梅拉尼娅?川普新任期计划</h2>
+<p>美国第一夫人梅拉尼娅?川普（Melania Trump）决定以更积极的姿态担任她的第二任期，经常参加与美国总统唐纳德?川普（Donald Trump）及主要利益相关者的会议，并就各种事务向总统提供建议。</p>
 <h2>特鲁多：加拿大期待与川普合作</h2>
-<p>加拿大总理贾斯汀·特鲁多（Justin Trudeau）祝贺美国总统唐纳德·川普（Donald Trump）第二次就职，并表示加拿大期待与新政府合作，“同时保护和捍卫加拿大人的利益”。</p>
+<p>加拿大总理贾斯汀?特鲁多（Justin Trudeau）祝贺美国总统唐纳德?川普（Donald Trump）第二次就职，并表示加拿大期待与新政府合作，“同时保护和捍卫加拿大人的利益”。</p>
 <p>特鲁多的评论是在川普威胁将加拿大变成美国第51个州并对所有加拿大产品征收25%关税之后发表的。</p>
 <p>特鲁多周一的声明强调了两国之间“互利共赢的关系”。</p>
 <p>“加拿大与美国拥有世界上最成功的经济伙伴关系。”声明中写道，“我们是彼此最大的贸易伙伴，这种关系创造了数百万个就业机会，吸引了数十亿美元的投资进入这片大陆，并确保我们的人民安全。”</p>
 <h2>拜登离开国会大厦前往安德鲁斯联合基地</h2>
-<p>前美国总统乔·拜登（Joe Biden）及前第一夫人吉尔·拜登博士（Dr. Jill Biden）离开美国国会大厦（US Capitol），前往安德鲁斯联合基地（Joint Base Andrews），之后他们将前往加利福尼亚州（California）。</p>
-<p>美国总统唐纳德·川普（Donald Trump）与第一夫人梅拉尼娅·川普（Melania Trump）送别他们。</p>
+<p>前美国总统乔?拜登（Joe Biden）及前第一夫人吉尔?拜登博士（Dr. Jill Biden）离开美国国会大厦（US Capitol），前往安德鲁斯联合基地（Joint Base Andrews），之后他们将前往加利福尼亚州（California）。</p>
+<p>美国总统唐纳德?川普（Donald Trump）与第一夫人梅拉尼娅?川普（Melania Trump）送别他们。</p>
 <h2>内塔尼亚胡祝贺川普：最好时刻尚未到来</h2>
-<p>以色列总理本杰明·内塔尼亚胡（Benjamin Netanyahu）在视频声明中祝贺美国总统唐纳德·川普（Donald Trump）第二次就职，表示“我们联盟的最好日子尚未到来”。</p>
+<p>以色列总理本杰明?内塔尼亚胡（Benjamin Netanyahu）在视频声明中祝贺美国总统唐纳德·川普（Donald Trump）第二次就职，表示“我们联盟的最好日子尚未到来”。</p>
 <p>他赞扬川普第一任期的重要举措，包括签署《亚伯拉罕协议》（Abraham Accords），以色列与阿联酋（United Arab Emirates）及巴林（Bahrain）的外交关系正常化；退出伊朗核协议（Iran nuclear deal）；承认耶路撒冷为以色列首都；将美国大使馆迁至耶路撒冷，并承认戈兰高地（Golan Heights）的主权。</p>
 <p>内塔尼亚胡相信，将击败伊朗恐怖轴心，为中东带来和平与繁荣新时代。他还感谢川普促成以色列与哈马斯（Hamas）之间的停火及人质交易。</p>
 <h2>川普：希望建立一个不分肤色、择优录取的社会</h2>
@@ -199,12 +199,12 @@
 <p>川普在就职演说中表示，他将终止司法部武器化。</p>
 <p>“正义的天平将重新平衡。”川普说。他表示，司法部和政府不公平的武器化行为将会终止。</p>
 <h2>川普：美国的黄金时代即将开始</h2>
-<p>美国新任总统唐纳德·川普周一宣誓就职美国第47任总统，他表示要“把美国放在首位”，并为美国开启新篇章。</p>
+<p>美国新任总统唐纳德?川普周一宣誓就职美国第47任总统，他表示要“把美国放在首位”，并为美国开启新篇章。</p>
 <p>川普在就职演说中表示：“美国黄金时代现在开启。”</p>
-<figure id="attachment_14418193" aria-describedby="caption-attachment-14418193" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418193-AFP__20250120__36UV3MV__v1__Preview__UsPoliticsTrumpInauguration-e1737393873132.jpg"><img decoding="async" class="size-full wp-image-14418193" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418193-AFP__20250120__36UV3MV__v1__Preview__UsPoliticsTrumpInauguration-e1737393873132.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418193" class="wp-caption-text">宣誓就职后，美国第47任总统川普发表演讲。(Photo by SAUL LOEB / POOL / AFP)</figcaption></figure>
+<figure id="attachment_14418193" aria-describedby="caption-attachment-14418193" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418193-AFP__20250120__36UV3MV__v1__Preview__UsPoliticsTrumpInauguration-e1737393873132.jpg"><img decoding="async" class="size-full wp-image-14418193" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418193-AFP__20250120__36UV3MV__v1__Preview__UsPoliticsTrumpInauguration-e1737393873132.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418193" class="wp-caption-text">宣誓就职后，美国第47任总统川普发表演讲。(Saul Loeb/POOL/AFP)</figcaption></figure>
 <h2>川普宣誓就职</h2>
 <p>川普正式宣誓<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">就任美国第47任总统。</span></span></span></p>
-<p>最高法院首席大法官约翰·罗伯茨（John Roberts）主持川普的宣誓仪式。</p>
+<p>最高法院首席大法官约翰?罗伯茨（John Roberts）主持川普的宣誓仪式。</p>
 <p>川普说：“<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">我郑重宣誓，我将忠实地履行美国总统职责，并将尽我所能，维护、保护和捍卫美国宪法。</span></span></span>”</p>
 <h2>万斯宣誓就职</h2>
 <p>万斯现在在家人的陪伴下宣誓就任美国副总统。</p>
@@ -215,20 +215,20 @@
 <p>根据准备好的演讲摘录，川普将说，“我重返总统职位时充满信心和乐观，我们正处于一个激动人心的国家成功新时代的开端。变革的浪潮正在席卷全国。”</p>
 <h2>川普上任首日行政令完整列表</h2>
 <p>《华尔街日报》报导，川普上任后将颁布一系列全面的行政命令，大致内容如下：</p>
-<p>移民：川普宣誓就职后不久将签署 10 项与移民相关的行政命令，其中包括一项将终止承认自动出生公民权的命令。</p>
+<p>移民：川普宣誓就职后不久将签署10项与移民相关的行政命令，其中包括一项将终止承认自动出生公民权的命令。</p>
 <p>DEI（多元共融）和性别认同：新政府计划终止联邦政府的多元化、公平和包容计划，并制定一项承认个人生理性别而非其表达的性别认同的政策。</p>
 <p>贸易：川普将指示联邦机构研究贸易政策并评估美国与中国和美国大陆邻国的贸易关系——但不会在上任第一天宣布征收新关税。</p>
 <p>能源：川普上任后计划宣布国家能源紧急状态——并采取行动使联邦政府能够削减能源项目的许可要求、加快发电厂建设并放松对化石燃料出口的限制。</p>
 <p>重新命名地标：川普计划重新命名墨西哥湾和德纳利山。墨西哥湾将更名为美国湾，德纳利山将再次被称为麦金利山。</p>
 <h2>男高音马基奥演唱</h2>
-<p>男高音克里斯多福·马基奥（Christopher Macchio）在川普宣誓仪式前演唱“Oh, America”</p>
-<figure id="attachment_14418180" aria-describedby="caption-attachment-14418180" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418180-AFP__20250120__36UR4XU__v1__Preview__UsPoliticsTrumpInauguration-e1737391732126.jpg"><img decoding="async" class="size-full wp-image-14418180" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418180-AFP__20250120__36UR4XU__v1__Preview__UsPoliticsTrumpInauguration-e1737391732126.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418180" class="wp-caption-text">2025年1月20日，在国会大厦，男高音克里斯多福·马基奥（Christopher Macchio）在川普宣誓仪式前演唱“Oh, America”。(Photo by SAUL LOEB / POOL / AFP)</figcaption></figure>
+<p>男高音克里斯多福?马基奥（Christopher Macchio）在川普宣誓仪式前演唱“Oh, America”</p>
+<figure id="attachment_14418180" aria-describedby="caption-attachment-14418180" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418180-AFP__20250120__36UR4XU__v1__Preview__UsPoliticsTrumpInauguration-e1737391732126.jpg"><img decoding="async" class="size-full wp-image-14418180" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418180-AFP__20250120__36UR4XU__v1__Preview__UsPoliticsTrumpInauguration-e1737391732126.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418180" class="wp-caption-text">2025年1月20日，在国会大厦，男高音克里斯多福?马基奥（Christopher Macchio）在川普宣誓仪式前演唱“Oh, America”。(Saul Loeb/POOL/AFP)</figcaption></figure>
 <h2>美国前总统和夫人</h2>
 <p>美国前总统奥巴马，前总统克林顿及夫人希拉里，前总统小布什夫妇，前副总统彭斯出席川普的就职典礼。</p>
-<figure id="attachment_14418167" aria-describedby="caption-attachment-14418167" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418167-AFP__20250120__36UU7AT__v1__Preview__UsPoliticsTrumpInauguration-e1737390448846.jpg"><img decoding="async" class="size-full wp-image-14418167" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418167-AFP__20250120__36UU7AT__v1__Preview__UsPoliticsTrumpInauguration-e1737390448846.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418167" class="wp-caption-text">2025年1月20日，美国前总统乔治·W·布什(George W. Bush) 抵达华盛顿特区美国国会大厦圆形大厅，出席川普就职典礼。 (Photo by SAUL LOEB / POOL / AFP)</figcaption></figure>
+<figure id="attachment_14418167" aria-describedby="caption-attachment-14418167" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418167-AFP__20250120__36UU7AT__v1__Preview__UsPoliticsTrumpInauguration-e1737390448846.jpg"><img decoding="async" class="size-full wp-image-14418167" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418167-AFP__20250120__36UU7AT__v1__Preview__UsPoliticsTrumpInauguration-e1737390448846.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418167" class="wp-caption-text">2025年1月20日，美国前总统乔治?W?布什（George W. Bush）抵达华盛顿特区美国国会大厦圆形大厅，出席川普就职典礼。 (Saul Loeb/POOL/AFP)</figcaption></figure>
 <h2>多国领导人参加典礼</h2>
-<p>参加川普就职典礼的嘉宾中，除了科技巨头和美国国会议员外，还有多国领导人，包括意大利总理<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">乔治亚·梅洛尼</span></span></span>（Giorgia Meloni）和阿根廷总统<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">哈维尔·米莱</span></span></span>（Javier Milei）。</p>
-<figure id="attachment_14418156" aria-describedby="caption-attachment-14418156" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418156-AFP__20250120__36UU9WG__v1__Preview__UsPoliticsTrumpInauguration-e1737389641232.jpg"><img decoding="async" class="size-full wp-image-14418156" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418156-AFP__20250120__36UU9WG__v1__Preview__UsPoliticsTrumpInauguration-e1737389641232.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418156" class="wp-caption-text">2025年1月20日，意大利总理乔治亚·梅洛尼（Giorgia Meloni）参加川普的就职典礼。(SAUL LOEB / POOL / AFP)</figcaption></figure>
+<p>参加川普就职典礼的嘉宾中，除了科技巨头和美国国会议员外，还有多国领导人，包括意大利总理<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">乔治亚?梅洛尼</span></span></span>（Giorgia Meloni）和阿根廷总统<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">哈维尔?米莱</span></span></span>（Javier Milei）。</p>
+<figure id="attachment_14418156" aria-describedby="caption-attachment-14418156" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418156-AFP__20250120__36UU9WG__v1__Preview__UsPoliticsTrumpInauguration-e1737389641232.jpg"><img decoding="async" class="size-full wp-image-14418156" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418156-AFP__20250120__36UU9WG__v1__Preview__UsPoliticsTrumpInauguration-e1737389641232.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418156" class="wp-caption-text">2025年1月20日，意大利总理乔治亚?梅洛尼（Giorgia Meloni）参加川普的就职典礼。(Saul Loeb/POOL/AFP)</figcaption></figure>
 <h2>拜登和川普一起前往美国国会大厦</h2>
 <p>在今天的宣誓就职仪式之前，川普和拜登乘坐同一辆豪华轿车前往美国国会大厦。</p>
 <p><span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">接下来，川普和当选副总统万斯将在国会大厦圆形大厅内举行的仪式上宣誓就职。</span></span><span class="jCAhz ChMk0b"><span class="ryNqvb">川普也将发表就职演说。</span></span></span></p>
@@ -242,40 +242,40 @@
 <p>“我们还听到他（川普）关于竭尽可能防止第三次世界大战爆发的声明。我们当然欢迎这种态度，并祝贺美国当选总统就职。”</p>
 <h2>美国总统就职典礼罕见在室内举行 这并非首次</h2>
 <p>通常，美国总统的就职仪式都是在室外举行。但由于首都地区的低温天气，川普的就职典礼将在室内举行。</p>
-<p>上一次发生这种情况是在1985年，当时罗纳德·里根（Ronald Reagan）在国会大厦圆形大厅宣誓就职。</p>
+<p>上一次发生这种情况是在1985年，当时罗纳德?里根（Ronald Reagan）在国会大厦圆形大厅宣誓就职。</p>
 <p>川普在“真相社交”上说，“我们将于周一开放第一资本体育馆，即时观看这一历史性事件，并举办总统游行。宣誓就职后，我将加入到第一资本体育馆的人群中。”</p>
-<figure id="attachment_14418146" aria-describedby="caption-attachment-14418146" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418146-AFP__20250120__36UU9HG__v1__Preview__UsPoliticsTrumpInauguration-e1737387677228.jpg"><img decoding="async" class="size-full wp-image-14418146" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418146-AFP__20250120__36UU9HG__v1__Preview__UsPoliticsTrumpInauguration-e1737387677228.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418146" class="wp-caption-text">2025年1月20日，川普在国会大厦圆形大厅宣誓就职总统前，圆形大厅内的座位图。(Andrew Harnik / POOL / AFP)</figcaption></figure>
+<figure id="attachment_14418146" aria-describedby="caption-attachment-14418146" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418146-AFP__20250120__36UU9HG__v1__Preview__UsPoliticsTrumpInauguration-e1737387677228.jpg"><img decoding="async" class="size-full wp-image-14418146" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418146-AFP__20250120__36UU9HG__v1__Preview__UsPoliticsTrumpInauguration-e1737387677228.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418146" class="wp-caption-text">2025年1月20日，川普在国会大厦圆形大厅宣誓就职总统前，圆形大厅内的座位图。(Andrew Harnik/POOL/AFP)</figcaption></figure>
 <h2>白宫茶会</h2>
 <p>今年，拜登和川普以及他们的配偶将在白宫一起喝茶。茶会将闭门举行，不允许媒体进入。</p>
 <p><span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">白宫茶会是就职时刻之一，它是民主选举后权力和平移交的明显标志。</span></span></span></p>
-<p>茶会传统始于1837年。当时即将卸任的安德鲁·杰克逊（Andrew Jackson）总统和候任总统马丁·范布伦（Martin Van Buren）举行了茶会。</p>
+<p>茶会传统始于1837年。当时即将卸任的安德鲁?杰克逊（Andrew Jackson）总统和候任总统马丁?范布伦（Martin Van Buren）举行了茶会。</p>
 <p>就在川普抵达白宫之前，拜登被问到他今天在白宫的最后一天感觉如何？</p>
 <p>“很好。”他回答。</p>
 <h2>拜登夫妇欢迎川普夫妇重返白宫</h2>
 <p>美国总统拜登和第一夫人吉尔欢迎候任总统川普和川普夫人梅拉尼娅来到白宫。</p>
 <p>“欢迎回家。”拜登对川普说。</p>
 <p>通常，在上午的礼拜之后，当选总统、当选副总统及其配偶会访问白宫。当选总统和即将卸任的总统会在那里举行简短的私人会面。</p>
-<figure id="attachment_14418118" aria-describedby="caption-attachment-14418118" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418118-AFP__20250120__36UU8UF__v1__Preview__UsPoliticsTrumpInauguration-e1737385617194.jpg"><img decoding="async" class="size-full wp-image-14418118" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418118-AFP__20250120__36UU8UF__v1__Preview__UsPoliticsTrumpInauguration-e1737385617194.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418118" class="wp-caption-text">2025年1月20日，拜登夫妇欢迎川普夫妇来白宫。(ROBERTO SCHMIDT / AFP)</figcaption></figure>
+<figure id="attachment_14418118" aria-describedby="caption-attachment-14418118" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418118-AFP__20250120__36UU8UF__v1__Preview__UsPoliticsTrumpInauguration-e1737385617194.jpg"><img decoding="async" class="size-full wp-image-14418118" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418118-AFP__20250120__36UU8UF__v1__Preview__UsPoliticsTrumpInauguration-e1737385617194.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418118" class="wp-caption-text">2025年1月20日，拜登夫妇欢迎川普夫妇来白宫。(Roberto Schmidt/AFP)</figcaption></figure>
 <p>第一夫人吉尔在担任美国第一夫人的最后一天穿着一身蓝。蓝色已经成为拜登一家非常具有代表性的颜色。</p>
 <p>在2021年拜登宣誓就职美国总统时，吉尔穿着一件蓝色外套。</p>
 <p>依照传统，卸任总统随后会陪同候任总统前往美国国会大厦参加宣誓就职仪式。</p>
 <h2>贺锦丽欢迎万斯夫妇</h2>
-<p>美国副总统贺锦丽和第二先生道格·埃姆霍夫（Doug Emhoff）欢迎当选副总统万斯和他的妻子乌莎·万斯（Usha Vance）来到白宫。</p>
-<figure id="attachment_14418109" aria-describedby="caption-attachment-14418109" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418109-AFP__20250120__36UR8LP__v1__Preview__UsPoliticsTrumpInauguration-e1737385091581.jpg"><img decoding="async" class="size-full wp-image-14418109" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418109-AFP__20250120__36UR8LP__v1__Preview__UsPoliticsTrumpInauguration-e1737385091581.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418109" class="wp-caption-text">从左到右，当选副总统万斯的夫人乌莎·万斯、美国第二先生道格·埃姆霍夫（Doug Emhoff）、副总统贺锦丽和当选副总统万斯。(ROBERTO SCHMIDT / AFP)</figcaption></figure>
+<p>美国副总统贺锦丽和第二先生道格?埃姆霍夫（Doug Emhoff）欢迎当选副总统万斯和他的妻子乌莎?万斯（Usha Vance）来到白宫。</p>
+<figure id="attachment_14418109" aria-describedby="caption-attachment-14418109" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418109-AFP__20250120__36UR8LP__v1__Preview__UsPoliticsTrumpInauguration-e1737385091581.jpg"><img decoding="async" class="size-full wp-image-14418109" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418109-AFP__20250120__36UR8LP__v1__Preview__UsPoliticsTrumpInauguration-e1737385091581.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418109" class="wp-caption-text">从左到右，当选副总统万斯的夫人乌莎·?万斯、美国第二先生道格?埃姆霍夫（Doug Emhoff）、副总统贺锦丽和当选副总统万斯。(Roberto Schmidt/AFP)</figcaption></figure>
 <h2>科技富豪出席教堂仪式</h2>
-<p>Meta首席执行官马克·扎克伯格（Mark Zuckerberg）、亚马逊创办人杰夫·贝佐斯（Jeff Bezos）等人出席圣约翰教堂仪式。</p>
-<p>英国前首相鲍里斯·约翰逊（Boris Johnson）也出席了教堂仪式。</p>
+<p>Meta首席执行官马克?扎克伯格（Mark Zuckerberg）、亚马逊创办人杰夫?贝佐斯（Jeff Bezos）等人出席圣约翰教堂仪式。</p>
+<p>英国前首相鲍里斯?约翰逊（Boris Johnson）也出席了教堂仪式。</p>
 <h2>川普支持者已在第一资本体育馆等候</h2>
 <p>川普的支持者已经开始在第一资本体育馆（Capital One Arena）就座，距离川普在国会大厦正式宣誓就职后的讲话还有整整八个小时。</p>
 <p>坐在座位上的数百人都穿着温暖的衣服，戴着红色的MAGA帽，以应对寒冷天气。</p>
 <h2>川普预计将签署10项移民行政令</h2>
 <p>据即将上任的白宫官员说，川普预计将签署10项与移民相关的行政令。</p>
 <h2>川普和万斯参加教堂礼拜</h2>
-<p>川普夫妇正在白宫附近的圣约翰圣公会教堂参加仪式，当选副总统万斯和他的妻子乌莎·万斯（Usha Vance）也在场。</p>
-<figure id="attachment_14418101" aria-describedby="caption-attachment-14418101" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418101-AFP__20250120__2194885381__v2__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-e1737382830637.jpg"><img decoding="async" class="size-full wp-image-14418101" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418101-AFP__20250120__2194885381__v2__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-e1737382830637.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418101" class="wp-caption-text">2025年1月20日，美国当选副总统万斯和夫人乌莎·万斯(Usha Vance) 抵达圣约翰教堂。(SCOTT OLSON / GETTY IMAGES NORTH AMERICA / Getty Images via AFP)</figcaption></figure>
+<p>川普夫妇正在白宫附近的圣约翰圣公会教堂参加仪式，当选副总统万斯和他的妻子乌莎?万斯（Usha Vance）也在场。</p>
+<figure id="attachment_14418101" aria-describedby="caption-attachment-14418101" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418101-AFP__20250120__2194885381__v2__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-e1737382830637.jpg"><img decoding="async" class="size-full wp-image-14418101" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418101-AFP__20250120__2194885381__v2__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-e1737382830637.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418101" class="wp-caption-text">2025年1月20日，美国当选副总统万斯和夫人乌莎?万斯（Usha Vance）抵达圣约翰教堂。(Scott Olson/GETTY IMAGES NORTH AMERICA/Getty Images via AFP)</figcaption></figure>
 <h2>川普离开布莱尔宫去教堂做礼拜</h2>
 <p>川普和梅拉尼娅离开白宫附近的布莱尔宫，前往圣约翰教堂参加仪式。</p>
-<p>随后，川普夫妇预计将在美国国会大厦举行宣誓就职仪式之前，在白宫会见拜登总统和第一夫人吉尔·拜登。</p>
+<p>随后，川普夫妇预计将在美国国会大厦举行宣誓就职仪式之前，在白宫会见拜登总统和第一夫人吉尔?拜登。</p>
 <h2>川普就职典礼七大要点</h2>
 <p>根据传统，首都华盛顿特区有一系列就职活动，包括音乐会、宣誓仪式、午宴、游行、就职舞会等。</p>
 <p>由于预测当天气温极低（华氏22度），川普的就职典礼已移至美国国会大厦圆形大厅内举行，类似1985年罗纳德?里根（Ronald Reagan）总统的安排。</p>
@@ -292,13 +292,14 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418341.md#1">参议院全票通过卢比奥任川普政府国务卿</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418340.md#1">美参议院委员会通过海格塞斯防长提名</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418267.md#1">拜登卸任后首发声：还有很多事要做</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/2/n9690997.md#1" target="_blank">修炼两年顽症消失 德国女士感恩大法</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
